# genvm

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ruff.toml  yabuild-default-conf.rb  yabuild.rb
doc/website/: generate-other.rb  pyproject.toml  yabuild.rb
doc/website/src/: conf.py  index.rst
doc/website/src/api/: genlayer.rst  genlayer_embeddings.rst  index.rst
doc/website/src/api/public/: genlayer.rst  genlayer.std.rst  index.rst
doc/website/src/spec/: index.rst
doc/website/src/spec/abi/: calldata.rst  contract_startup.rst  index.rst  runners.rst
executor/: Cargo.toml  default-config.yaml  yabuild.rb
executor/codegen/data/: host-fns.json  result-codes.json
executor/common/src/: lib.rs
executor/common/src/calldata/: se.rs
executor/modules/default-impl/llm-funcs/src/: lib.rs
executor/modules/default-impl/web-funcs/: webdriver.dockerfile
executor/modules/implementation/: Cargo.toml  llm-default-config.yaml  web-default-config.yaml  yabuild.rb
executor/modules/implementation/llm-funcs/src/: lib.rs
executor/modules/implementation/scripting/: lib-genvm.lua  lib-llm.lua  lib-web.lua  llm-default.lua  web-default.lua
executor/modules/implementation/src/: main.rs
executor/modules/implementation/src/common/: mod.rs
executor/modules/implementation/src/llm/: config.rs  ctx.rs  handler.rs  mod.rs  prompt.rs  providers.rs
executor/modules/implementation/src/scripting/: mod.rs  pool.rs
executor/modules/implementation/src/web/: config.rs  ctx.rs  domains.rs  handler.rs  mod.rs
executor/modules/implementation/tests/lua/: bytes.lua  get_status.lua
executor/modules/interfaces/src/: lib.rs
executor/src/: errors.rs  lib.rs  memlimiter.rs  mmap.rs  modules.rs  runner.rs  ustar.rs  vm.rs
executor/src/exe/: run.rs
executor/src/host/: host_fns.rs  mod.rs  result_codes.rs
executor/src/wasi/: genlayer_sdk.rs  gl_call.rs
executor/src/wasi/witx/: genlayer_sdk.witx  genlayer_sdk_types.witx
executor/testdata/cases/: _hello_world_.jsonnet  _hello_world_class.jsonnet  _hello_world_class_nondet.jsonnet  _hello_world_class_nondet.py
executor/testdata/cases/exploits/: .gitignore  call_wasi_extra.py  call_wasi_extra.stdout  disagree_in_sandbox.jsonnet  disagree_in_sandbox.py  disagree_in_sandbox.stdout  file_schema_web.py  file_schema_web_bash.jsonnet  file_schema_web_proc.jsonnet  flt.jsonnet  flt.stdout  fork_bomb.jsonnet  fork_bomb.py  fork_bomb.stdout  inf-loop.jsonnet  inf-loop.stdout  long_request.py  map_too_many.jsonnet  map_too_many.stdout  map_too_many_prepare.py  storage_r_long.py  storage_w_long.py
executor/testdata/cases/module/: np.jsonnet
executor/testdata/cases/py-core/: call_view.jsonnet  call_view_from.py  call_view_iface.jsonnet  deploy.jsonnet  deploy.msgs  deploy.py  deploy.stdout  method_init.jsonnet  method_init_wrong_name.jsonnet  method_public.jsonnet  method_retn.jsonnet  method_retn_ser.jsonnet  method_retn_view.jsonnet  method_rollback.jsonnet  methods.py  send_message.jsonnet  send_message.msgs  send_message.py  send_message_eth.jsonnet  send_message_eth.msgs  send_message_eth.py  send_message_on.2.stdout  send_message_on.py  storage_persists.jsonnet  tree_map_nested.jsonnet
executor/testdata/cases/py-core/balances/: balance.py  balance_eth.py
executor/testdata/cases/py-core/embeddings/: simple.jsonnet  simple.py  simple_det.jsonnet  vecdb.py
executor/testdata/cases/py-core/erroring/: malformed_runner.jsonnet  malformed_runner.stdout  method_init.jsonnet  method_private.jsonnet  metod_det_get_webpage.jsonnet  no_runner.jsonnet  no_runner.stdout  oom.jsonnet  oom.stdout
executor/testdata/cases/py-core/leader_errors/: leader_no_nondet.stdout  simple.py  simple_leader.jsonnet  simple_valid_err_err.jsonnet  simple_valid_err_err.stdout  simple_valid_err_exit.jsonnet  simple_valid_err_exit.stdout  simple_valid_err_exit2.jsonnet  simple_valid_err_exit_wrong_err.jsonnet  simple_valid_err_exit_wrong_err.stdout  simple_valid_err_nerr.jsonnet
executor/testdata/cases/py-core/nondet/: call_llm.jsonnet  call_llm.py  call_llm_img.py  call_llm_json.py  eq_prompt_comparative.jsonnet  eq_prompt_comparative.py  eq_prompt_non_comparative.jsonnet  eq_prompt_non_comparative.py  eq_prompt_non_comparative_validator.jsonnet  eq_prompt_non_comparative_validator_bad.jsonnet  get_webpage.py  get_webpage_html.jsonnet  get_webpage_screenshot.py  get_webpage_text.jsonnet  get_webpage_wait_js.py  request_body.jsonnet  request_body.py  request_body.stdout  request_status.0.stdout  request_status.1.stdout  request_status.jsonnet  request_status.py  trivial.jsonnet  trivial.py
executor/testdata/cases/py-core/pitfalls/: multi_contract.jsonnet  pub_ctor.jsonnet
executor/testdata/cases/py-core/rollbacks/: call_view_from.py  call_view_to.py  nondet.jsonnet  nondet.py  simple.jsonnet  simple.py  simple.stdout
executor/testdata/cases/py-core/schemas/: complex_types.jsonnet  prim_types.jsonnet  trivial.jsonnet
executor/testdata/cases/py-core/self-run/: datetime.jsonnet  floats.jsonnet  re.jsonnet  storage.jsonnet  storage_tree_map.jsonnet  (+1 more)
executor/testdata/cases/runners/: dup-dependency-prepare.py  dup-dependency.jsonnet  dup-dependency.py  env-template.jsonnet
executor/testdata/runner/: base_host.py  host_fns.py  mock_host.py  requirements.txt  result_codes.py  run.py
executor/testdata/templates/: message.json  simple.jsonnet  two.jsonnet
executor/testdata/web-container/: run-test-docker.sh  webdriver.dockerfile
executor/testdata/web-container/volume/: server.py
runners/genlayer-py-std/: default.nix  pyproject.toml  yabuild.rb
runners/genlayer-py-std/src/: _genlayer_wasi.pyi
runners/genlayer-py-std/src-emb/genlayer_embeddings/: __init__.py  model_wrappers.py  vecdb.py
runners/genlayer-py-std/src-emb/onnx/: __init__.py  mapping.py
runners/genlayer-py-std/src/genlayer/: __init__.py
runners/genlayer-py-std/tests/: test_eth_contract.py  test_eth_cross.py  test_eth_decoding.py  test_eth_encoding.py  test_storage_vecdb.py
runners/genlayer-py-std/tests/embeddings/: test_embeddings.py  test_embeddings_const_size.py
(+235 files in other folders)
