cargo-features = ["profile-rustflags"]

[package]
name = "genvm"
version = "0.1.0"
edition = "2021"

[profile.dev]
rustflags = [
    #"-Zsanitizer=address"
    #"--remap-path-prefix=src/=genvm/executor/src/"
]

[profile.dev.package.cranelift-codegen]
opt-level = 2
[profile.dev.package.cranelift-entity]
opt-level = 2
[profile.dev.package.cranelift-frontend]
opt-level = 2
[profile.dev.package.cranelift-codegen-shared]
opt-level = 2
[profile.dev.package.cranelift-bforest]
opt-level = 2
[profile.dev.package.cranelift-bitset]
opt-level = 2
[profile.dev.package.cranelift-control]
opt-level = 2
[profile.dev.package.cranelift-wasm]
opt-level = 2
[profile.dev.package.cranelift-native]
opt-level = 2
[profile.dev.package.wasmtime]
opt-level = 2
[profile.dev.package.wasmtime-cranelift]
opt-level = 2
[profile.dev.package.wasmparser]
opt-level = 2
[profile.dev.package.regalloc2]
opt-level = 2

[profile.release]
debug = true

[dependencies]
# 432745aca5ee802255935768125810fcba38dae0
wasmtime = { path = "third-party/wasmtime/crates/wasmtime", default-features = false, features = ["cranelift", "std", "parallel-compilation", "cache", "demangle"] }
wasmtime-cache = { path = "third-party/wasmtime/crates/cache" }
wiggle = { path = "third-party/wasmtime/crates/wiggle" }
wasmparser = { path = "third-party/wasm-tools/crates/wasmparser" }

anyhow = { version = "1.0.22", default-features = false }
tracing = "0.1.26"
serde = { version = "1.0.204", features = ["rc"]}
serde_json = "1.0.122"
clap = { version = "4.5.16", features = ["derive"] }
serde_with = { version = "3.9.0", features = ["base64"] }
regex = "1.10.6"
itertools = "0.13.0"
libloading = "0.8.5"
genvm-modules-common = { path = "modules/common" }
libc = { version = "0.2.158", default-features = false }
zip = "2.2.0"
directories-next = "2.0.0"
signal-hook = "0.3.17"
once_cell = "1.20.2"
structured-logger = "1.0.3"
log = { version = "0.4.22", features = ["release_max_level_info"]}
chrono = { version = "0.4.38", features = ["serde"] }
base64 = "0.22.1"
symbol_table = { version = "0.4.0", features = ["global"] }
