[tool.poetry]
name = "genvm-sdk-python"
version = "0.1.0"
description = ""
authors = ["Kira Prokopenko <kira@yeager.ai>"]
#readme = "README.md"
packages = [
    { include = "genlayer", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-xdist = "^3.6.1"
mypy = "^1.11.2"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "--cov=src/genlayer/py --cov-report term-missing --cov-fail-under=75"

[tool.mypy]
exclude  = [
    "tests",
    "src/cloudpickle",
]
