# cargo-features = ["trim-paths"]

[package]
name = "genvm-cpython-ext"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
genvm-sdk-rust = { path = "./sdk-rust", default-features = false }
num-bigint = "0.4.6"

[dependencies.pyo3]
version = "0.24.0"
default-features = false
features = ["macros", "abi3-py312", "extension-module", "num-bigint"]

[profile.release]
lto = "fat"
strip = "debuginfo"
incremental = false
codegen-units = 1
# trim-paths = "all"
